--- a/ruby/ProviderOne/app/assets/stylesheets/home.css.scss
+++ b/ruby/ProviderOne/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,53 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#leftcolumn {
+	width: 400px;
+    height: 400px;
+    overflow: auto;
+	border: 1px solid red;
+	float: left;
+    padding:4px;
+}
+
+#rightcolumn {
+	width: 400px;
+    height: 400px;
+    overflow: auto;
+	border: 1px solid red;
+	float: left;
+    padding:4px;
+}
+
+.clear { clear: both;}
+
+/* CSS Document */
+
+.textfield_effect    {
+    /*we will first set the border styles.*/
+    border-width: 1px;
+    border-style: solid;
+    border-color: #999999;
+    /*we are now going to add in the shadow image that we created earlier*/
+    background-image: url(back_field.gif);
+    background-repeat: repeat-x;
+    /*I am going to add some text formatting of my own*/
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    color: #333333;
+    width: 390px;
+    height: 15px;
+    }
+
+/*we are now going to style how the textfield will look when we
+hover over it and when we actually have it selected*/
+
+.textfield_effect:hover    {
+    border-color: #64acd8;
+    border-width: 1px;
+    }
+
+.textfield_effect:focus    {
+    border-color: #64acd8;
+    border-width: 1px;
+    }
