--- a/ruby/ProviderOne/app/views/home/options.html.erb
+++ b/ruby/ProviderOne/app/views/home/options.html.erb
@@ -29,7 +29,7 @@
       <%@dbinfo.tables.each_value do |table|%>
           <p>
               <strong><%=table.name%></strong>
-              lookup Key =
+              lookup key =
               <%= select_tag "lookup_key_" + table.name, options_from_collection_for_select(table.columns, :name, :name, table.get_lookup_column.name) %>
               <%= hidden_field(:dbinfo, :upload_id) %>
           </p>
