--- a/ruby/ProviderOne/app/views/home/options.html.erb
+++ b/ruby/ProviderOne/app/views/home/options.html.erb
@@ -28,17 +28,25 @@
       <h2>Table Lookup Keys</h2>
       <%@dbinfo.tables.each_value do |table|%>
           <p>
-              <strong><%=table.name%></strong>
+              <strong><%=table.name%></strong><br/>
               lookup key =
               <%= select_tag "lookup_key_" + table.name, options_from_collection_for_select(table.columns, :name, :name, table.get_lookup_column.name) %>
-              <%= hidden_field(:dbinfo, :upload_id) %>
+
+              <br/>
+
+              update algorithm =
+              <%= select_tag "update_algorithm_" + table.name, options_from_array_for_select(insert_update_algorithms, table.update_algorithm)%>
+              <br/>
+
+              insert algorithm =
+              <%= select_tag "insert_algorithm_" + table.name, options_from_array_for_select(insert_update_algorithms, table.insert_algorithm)%>
           </p>
       <%end%>
 
     </div>
 
     <div class="clear"></div>
-
+    <%= hidden_field(:dbinfo, :upload_id) %>
     <%= submit_tag "Submit" %>
 <% end -%>
 
