getting camel names right

--- a/ruby/ProviderOne/app/views/home/index.html.erb
+++ b/ruby/ProviderOne/app/views/home/index.html.erb
@@ -7,10 +7,10 @@
       <label for="upload1_datafile">SQLite database</label> : <br/>
 
       <%=radio_button(:upload1, "filetype", "binary")%>
-      <label for="dbinfo_filetype_binary">Binary SQLite file</label>
+      <label for="upload1_filetype_binary">Binary SQLite file</label>
 
       <%=radio_button(:upload1, "filetype", "text")%>
-      <label for="dbinfo_filetype_text">.sql text file</label><br/>
+      <label for="upload1_filetype_text">.sql text file</label><br/>
 
 	  <%= file_field :upload1, 'datafile' %><br/>
 
