added copyright messages

--- a/ruby/ProviderOne/app/views/home/options.html.erb
+++ b/ruby/ProviderOne/app/views/home/options.html.erb
@@ -25,6 +25,11 @@
       Content Authority: (may be a function call, use quotes if defining constant)<br/>
       <%= text_field(:dbinfo, :content_authority, {"class" => "textfield_effect"})%>
 
+      <br/><br/>
+
+      Copyright Message:<br/>
+      <%= text_area(:dbinfo, :copyright_msg, :cols => 50, :rows =>6) %>
+
     </div>
 
 
