--- a/java/SampleProviderProject/res/layout/main.xml
+++ b/java/SampleProviderProject/res/layout/main.xml
@@ -4,6 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
+    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Go To List" android:id="@+id/btn_list"></Button>
 <ScrollView android:layout_height="wrap_content" android:id="@+id/scrollView1" android:layout_width="match_parent">
     <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="match_parent">
         <TextView android:id="@+id/textview" android:layout_width="fill_parent" android:text="@string/hello" android:layout_height="wrap_content"></TextView>
