now deleting the sqlite file once the package has been downloaded

--- a/ruby/ProviderOne/app/views/home/options.html.erb
+++ b/ruby/ProviderOne/app/views/home/options.html.erb
@@ -1,4 +1,4 @@
-<%=form_tag '/home/download' do -%>
+<%=form_tag '/home/finish_up' do -%>
     <div id="leftcolumn">
       <h2>Application / Database Info</h2>
 
